--- a/FrbaCommerce/FrbaCommerce.csproj
+++ b/FrbaCommerce/FrbaCommerce.csproj
@@ -64,6 +64,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abm Cliente\Cliente.cs" />
     <Compile Include="Abm Cliente\FormABMCliente.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -252,6 +253,7 @@
       <DependentUpon>FormRegistro.cs</DependentUpon>
     </Compile>
     <Compile Include="Registro de Usuario\Registro.cs" />
+    <Compile Include="Variables.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Framework.2.0">
