--- a/FrbaCommerce/Properties/Settings.settings
+++ b/FrbaCommerce/Properties/Settings.settings
@@ -9,5 +9,11 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Server=localhost\SQLSERVER2008;Database=GD1C2014;User Id=gd;Password=gd2014;MultipleActiveResultSets=True</Value>
     </Setting>
+    <Setting Name="fechaSistema" Type="System.String" Scope="User">
+      <Value Profile="(Default)">01-01-2014 12:00:00</Value>
+    </Setting>
+    <Setting Name="formatoFecha" Type="System.String" Scope="User">
+      <Value Profile="(Default)">dd-MM-yyyy HH:mm:ss</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
