cambio en archivo .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -28,4 +28,6 @@ _ReSharper*/
 [Tt]est[Rr]esult*
 #Ignore Folder
 ConsoleApplication1/
-No va/
+No van/
+FrbaCommerce.sln
+WindowsFormsApplication1/
