--- a/FrbaCommerce/FrbaCommerce.csproj
+++ b/FrbaCommerce/FrbaCommerce.csproj
@@ -12,6 +12,7 @@
     <AssemblyName>FrbaCommerce</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -24,7 +25,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -77,6 +77,18 @@
     <Compile Include="Abm Cliente\FormABMClienteAlta.Designer.cs">
       <DependentUpon>FormABMClienteAlta.cs</DependentUpon>
     </Compile>
+    <Compile Include="Abm Cliente\FormABMClienteModificacion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Abm Cliente\FormABMClienteModificacion.Designer.cs">
+      <DependentUpon>FormABMClienteModificacion.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Abm Cliente\FormABMClienteModElim.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Abm Cliente\FormABMClienteModElim.Designer.cs">
+      <DependentUpon>FormABMClienteModElim.cs</DependentUpon>
+    </Compile>
     <Compile Include="Abm Empresa\FormABMEmpresa.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -125,7 +137,7 @@
     <Compile Include="Abm Visibilidad\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="BaseDeDatos.cs" />
+    <Compile Include="Procedimientos.cs" />
     <Compile Include="Calificar Vendedor\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -138,6 +150,7 @@
     <Compile Include="Comprar-Ofertar\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Constantes.cs" />
     <Compile Include="Editar Publicacion\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -200,6 +213,12 @@
     <EmbeddedResource Include="Abm Cliente\FormABMClienteAlta.resx">
       <DependentUpon>FormABMClienteAlta.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Abm Cliente\FormABMClienteModElim.resx">
+      <DependentUpon>FormABMClienteModElim.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Abm Cliente\FormABMClienteModificacion.resx">
+      <DependentUpon>FormABMClienteModificacion.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Abm Empresa\FormABMEmpresa.resx">
       <DependentUpon>FormABMEmpresa.cs</DependentUpon>
     </EmbeddedResource>
@@ -217,6 +236,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ABM Rol\FormABMRolModificar.resx">
       <DependentUpon>FormABMRolModificar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login\FormLogin.resx">
       <DependentUpon>FormLogin.cs</DependentUpon>
@@ -253,6 +275,7 @@
       <DependentUpon>FormRegistro.cs</DependentUpon>
     </Compile>
     <Compile Include="Registro de Usuario\Registro.cs" />
+    <Compile Include="Validaciones.cs" />
     <Compile Include="Variables.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -269,6 +292,11 @@
     <BootstrapperPackage Include="Microsoft.Net.Framework.3.5">
       <Visible>False</Visible>
       <ProductName>.NET Framework 3.5</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.SQL.Server.Compact.3.5">
+      <Visible>False</Visible>
+      <ProductName>SQL Server Compact 3.5</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
     <BootstrapperPackage Include="Microsoft.Windows.Installer.3.1">
