--- a/FrbaCommerce/FrbaCommerce.csproj
+++ b/FrbaCommerce/FrbaCommerce.csproj
@@ -108,6 +108,12 @@
     <Compile Include="Abm Empresa\FormEmpresaModElim.Designer.cs">
       <DependentUpon>FormEmpresaModElim.cs</DependentUpon>
     </Compile>
+    <Compile Include="Abm Empresa\FormEmpresaModificacion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Abm Empresa\FormEmpresaModificacion.Designer.cs">
+      <DependentUpon>FormEmpresaModificacion.cs</DependentUpon>
+    </Compile>
     <Compile Include="ABM Rol\FormABMRol.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -240,6 +246,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Abm Empresa\FormEmpresaModElim.resx">
       <DependentUpon>FormEmpresaModElim.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Abm Empresa\FormEmpresaModificacion.resx">
+      <DependentUpon>FormEmpresaModificacion.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ABM Rol\FormABMRol.resx">
       <DependentUpon>FormABMRol.cs</DependentUpon>
