Se modifica la manera de validar datos

--- a/FrbaCommerce/FrbaCommerce.csproj
+++ b/FrbaCommerce/FrbaCommerce.csproj
@@ -182,11 +182,11 @@
     <Compile Include="Facturar Publicaciones\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="FormMenu.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FormMenu.Designer.cs">
+      <DependentUpon>FormMenu.cs</DependentUpon>
     </Compile>
     <Compile Include="Generar Publicacion\Form1.cs">
       <SubType>Form</SubType>
@@ -265,8 +265,8 @@
     <EmbeddedResource Include="ABM Rol\FormABMRolModificar.resx">
       <DependentUpon>FormABMRolModificar.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="FormMenu.resx">
+      <DependentUpon>FormMenu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login\FormLogin.resx">
       <DependentUpon>FormLogin.cs</DependentUpon>
@@ -303,6 +303,8 @@
       <DependentUpon>FormRegistro.cs</DependentUpon>
     </Compile>
     <Compile Include="Registro de Usuario\Registro.cs" />
+    <Compile Include="Rol.cs" />
+    <Compile Include="Usuarios.cs" />
     <Compile Include="Validaciones.cs" />
     <Compile Include="Variables.cs" />
   </ItemGroup>
