--- a/FrbaCommerce/FrbaCommerce.csproj
+++ b/FrbaCommerce/FrbaCommerce.csproj
@@ -189,11 +189,11 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Constantes.cs" />
-    <Compile Include="Editar Publicacion\Form1.cs">
+    <Compile Include="Editar Publicacion\FormEditarPublicacion.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Editar Publicacion\Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Editar Publicacion\FormEditarPublicacion.Designer.cs">
+      <DependentUpon>FormEditarPublicacion.cs</DependentUpon>
     </Compile>
     <Compile Include="Facturar Publicaciones\FormFacturarPublicaciones.cs">
       <SubType>Form</SubType>
@@ -290,6 +290,9 @@
     <EmbeddedResource Include="Abm Visibilidad\FormABMVisibilidadModificar.resx">
       <DependentUpon>FormABMVisibilidadModificar.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Editar Publicacion\FormEditarPublicacion.resx">
+      <DependentUpon>FormEditarPublicacion.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Facturar Publicaciones\FormElegirMedioDePago.resx">
       <DependentUpon>FormElegirMedioDePago.cs</DependentUpon>
     </EmbeddedResource>
@@ -336,6 +339,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Publicacion.cs" />
     <Compile Include="Registro de Usuario\FormRegistro.cs">
       <SubType>Form</SubType>
     </Compile>
