--- a/FrbaCommerce/FrbaCommerce.csproj
+++ b/FrbaCommerce/FrbaCommerce.csproj
@@ -176,11 +176,11 @@
       <DependentUpon>FormGenerarPublicacionAM.cs</DependentUpon>
     </Compile>
     <Compile Include="Procedimientos.cs" />
-    <Compile Include="Calificar Vendedor\Form1.cs">
+    <Compile Include="Calificar Vendedor\FormSeleccionACalificar.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Calificar Vendedor\Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Calificar Vendedor\FormSeleccionACalificar.Designer.cs">
+      <DependentUpon>FormSeleccionACalificar.cs</DependentUpon>
     </Compile>
     <Compile Include="Comprar-Ofertar\Form1.cs">
       <SubType>Form</SubType>
@@ -289,6 +289,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Abm Visibilidad\FormABMVisibilidadModificar.resx">
       <DependentUpon>FormABMVisibilidadModificar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Calificar Vendedor\FormSeleccionACalificar.resx">
+      <DependentUpon>FormSeleccionACalificar.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Editar Publicacion\FormEditarPublicacion.resx">
       <DependentUpon>FormEditarPublicacion.cs</DependentUpon>
