--- a/FrbaCommerce/FrbaCommerce.csproj
+++ b/FrbaCommerce/FrbaCommerce.csproj
@@ -187,6 +187,12 @@
     <Compile Include="Generar Publicacion\FormGenerarPublicacionAM.Designer.cs">
       <DependentUpon>FormGenerarPublicacionAM.cs</DependentUpon>
     </Compile>
+    <Compile Include="Listado Estadistico\Listado Estadistico.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Listado Estadistico\Listado Estadistico.Designer.cs">
+      <DependentUpon>Listado Estadistico.cs</DependentUpon>
+    </Compile>
     <Compile Include="Procedimientos.cs" />
     <Compile Include="Calificar Vendedor\FormSeleccionACalificar.cs">
       <SubType>Form</SubType>
@@ -230,12 +236,6 @@
     </Compile>
     <Compile Include="Historial Cliente\FormHistorialUsuario.Designer.cs">
       <DependentUpon>FormHistorialUsuario.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Listado Estadistico\Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Listado Estadistico\Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Login\FormLogin.cs">
       <SubType>Form</SubType>
@@ -322,6 +322,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Historial Cliente\FormHistorialUsuario.resx">
       <DependentUpon>FormHistorialUsuario.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Listado Estadistico\Listado Estadistico.resx">
+      <DependentUpon>Listado Estadistico.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login\FormLogin.resx">
       <DependentUpon>FormLogin.cs</DependentUpon>
