--- a/FrbaCommerce/FrbaCommerce.csproj
+++ b/FrbaCommerce/FrbaCommerce.csproj
@@ -200,11 +200,11 @@
     <Compile Include="Calificar Vendedor\FormSeleccionACalificar.Designer.cs">
       <DependentUpon>FormSeleccionACalificar.cs</DependentUpon>
     </Compile>
-    <Compile Include="Comprar-Ofertar\Form1.cs">
+    <Compile Include="Comprar Ofertar\FormComprarOfertar.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Comprar-Ofertar\Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Comprar Ofertar\FormComprarOfertar.Designer.cs">
+      <DependentUpon>FormComprarOfertar.cs</DependentUpon>
     </Compile>
     <Compile Include="Constantes.cs" />
     <Compile Include="Facturar Publicaciones\FormFacturarPublicaciones.cs">
@@ -301,6 +301,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Calificar Vendedor\FormSeleccionACalificar.resx">
       <DependentUpon>FormSeleccionACalificar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Comprar Ofertar\FormComprarOfertar.resx">
+      <DependentUpon>FormComprarOfertar.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Editar Publicacion\FormEditarPublicacion.resx">
       <DependentUpon>FormEditarPublicacion.cs</DependentUpon>
